# VLSP_Legal_Document_Retrieval

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/benchmark/: cal_metric.py
src/config/: default.yaml  envconfig.py  punc_chunking.yaml
src/core/chunking/: baseline_chunking.py  clustering_based.py  clustering_chunking.py  late_chunking.py  maxmin_chunking.py  punc_chunking.py  pydamic_chunking.py
src/core/db/: payload_schema.py  qdrant.py
src/core/retriever/: baseline_retriever.py  fusion_retriever.py  reranking_retriever.py
src/llm/: __init__.py  base.py  openai_model.py  vllm_model.py
src/notebook/: eda.ipynb
src/pipeline/: baseline.py
src/prompts/: template.py
src/results/: baseline_results.json  punc_chunking_results.json
src/scripts/: run_baseline.sh
src/tests/: test_llm.py
src/utils/: configs.py  lawid_expand.py  logger.py  model.py  output_parser.py  schema.py
