[project]
name = "vlsp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "pyvi>=0.1.1",
    "qdrant-client>=1.15.0",
    "rank-bm25>=0.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
]
